--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -51,7 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\IProductDal.cs" />
+    <Compile Include="Abstract\DataAccessObjects\IProductDal.cs" />
+    <Compile Include="Abstract\Repositories\IEntityRepository.cs" />
+    <Compile Include="Concrete\ORMs\EntityFramework\Base\EfEntityRepositoryBase.cs" />
     <Compile Include="Concrete\ORMs\EntityFramework\DBContexts\NorthwindContext.cs" />
     <Compile Include="Concrete\ORMs\EntityFramework\DataAccessLayers\EfProductDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
