Yeni database oluşturuldu ve gereksinimler kodlandı. Arayüz kısmında geliştirmeler yapıldı

--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IProductService.cs" />
+    <Compile Include="Abstract\IWorkerService.cs" />
     <Compile Include="Concrete\ProductManager.cs" />
+    <Compile Include="Concrete\WorkerManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
