--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -52,8 +52,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\DataAccessObjects\IProductDal.cs" />
+    <Compile Include="Abstract\DataAccessObjects\ITitleDal.cs" />
+    <Compile Include="Abstract\DataAccessObjects\IWorkerDal.cs" />
     <Compile Include="Abstract\Repositories\IEntityRepository.cs" />
     <Compile Include="Concrete\ORMs\EntityFramework\Base\EfEntityRepositoryBase.cs" />
+    <Compile Include="Concrete\ORMs\EntityFramework\DataAccessLayers\BusinessDbContext.cs" />
+    <Compile Include="Concrete\ORMs\EntityFramework\DataAccessLayers\EfTitleDal.cs" />
+    <Compile Include="Concrete\ORMs\EntityFramework\DataAccessLayers\EfWorkerDal.cs" />
+    <Compile Include="Concrete\ORMs\EntityFramework\DBContexts\BusinessDBContext.cs" />
     <Compile Include="Concrete\ORMs\EntityFramework\DBContexts\NorthwindContext.cs" />
     <Compile Include="Concrete\ORMs\EntityFramework\DataAccessLayers\EfProductDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
