--- a/FormUI/App.config
+++ b/FormUI/App.config
@@ -7,16 +7,24 @@
           requirePermission="false"/>
     </configSections>
 
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="NorthwindContext"
          connectionString="data source=(localdb)\mssqllocaldb;
          initial catalog=northwind;
          integrated security=true"
          providerName="System.Data.SqlClient"/>
+  </connectionStrings>-->
+
+  <connectionStrings>
+    <add name="BusinessDBContext"
+         connectionString="data source=(localdb)\mssqllocaldb;
+         initial catalog=BusinessDB;
+         integrated security=true"
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
-  
-  
-    <startup> 
+
+
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
     <entityFramework>
