--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -51,12 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\DataAccessObjects\IDepartmantDal.cs" />
     <Compile Include="Abstract\DataAccessObjects\IProductDal.cs" />
     <Compile Include="Abstract\DataAccessObjects\ITitleDal.cs" />
     <Compile Include="Abstract\DataAccessObjects\IWorkerDal.cs" />
     <Compile Include="Abstract\Repositories\IEntityRepository.cs" />
     <Compile Include="Concrete\ORMs\EntityFramework\Base\EfEntityRepositoryBase.cs" />
-    <Compile Include="Concrete\ORMs\EntityFramework\DataAccessLayers\BusinessDbContext.cs" />
+    <Compile Include="Concrete\ORMs\EntityFramework\DataAccessLayers\EfDepartmantDal.cs" />
     <Compile Include="Concrete\ORMs\EntityFramework\DataAccessLayers\EfTitleDal.cs" />
     <Compile Include="Concrete\ORMs\EntityFramework\DataAccessLayers\EfWorkerDal.cs" />
     <Compile Include="Concrete\ORMs\EntityFramework\DBContexts\BusinessDBContext.cs" />
